--- a/index.html
+++ b/index.html
@@ -12,3 +12,5 @@
 Sale On 11x14 Canvases &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Shop For All Of Your Favorite Art Supplies! &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Buy Paint Brushes, Acrylic Paints, Oil Paints, Clay and More!!
 </marquee>
 </header>
+
+  <img src="Art Shop.jpg" width="50%" height="75%">
