--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
 Sale On 11x14 Canvases &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Shop For All Of Your Favorite Art Supplies! &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Buy Paint Brushes, Acrylic Paints, Oil Paints, Clay and More!!
 </marquee>
 </header>
-
+  
+  <center>
   <img src="Art Shop.jpg" width="100%" height="75%">
+  </center>
+  <hr>
+  <h2 style="background-color:#FAF3EE; color: #053B47; text-align:center;">
+    <u>
+    About The Shop
+    </u>
+  </h2>
+  <h4 style="text-align:center; color:#053B47;">
+    Our art shop has the products you need for home decor, framing, scrapbooking and more. Shop and save on arts and crafts supplies online or at a store near you.
+  </h4>
+  
