--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@ Sale On 11x14 Canvases &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nb
   <img src="Art Shop.jpg" width="80%" height="60%">
   </center>
   <hr>
-  <h2 style="background-color:#FAF3EE; color: #053B47; text-align:center;">
+  <h1 style="background-color:#FAF3EE; color: #053B47; text-align:center; font-family:Monotype Corvisa;">
     <u>
     About The Shop
     </u>
-  </h2>
-  <h4 style="text-align:center; color:#053B47;">
+  </h1>
+  <h3 style="text-align:center; color:#053B47;">
     Our art shop has the products you need for home decor, framing, scrapbooking and more. Shop and save on arts and crafts supplies online or at a store near you.
-  </h4>
+  
+  </h3>
   
