--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title> Art Shop </title>
 </head>
 
-<body>
+<body bgcolor="FAF3EE">
 <header style="background-color:#FFC1A2; font-family:Monotype Corsiva;">
 <u><h1 style="background-color:#FFC1A2; color:#053B47; text-align:center;">Art Shop</h1></u>
 <h2><marquee style="background-color:#053B47; color:#FFEAE0; text-align:center;">
@@ -23,7 +23,7 @@ Sale On 11x14 Canvases &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nb
     </u>
   </h1>
   <h3 style="text-align:center; color:#053B47;">
-    Our art shop has the products you need for home decor, framing, scrapbooking and more. Shop and save on arts and crafts supplies online or at a store near you.
-  
+    Our art shop has the products you need for home decor, framing, scrapbooking and more. Shop and save on arts and crafts supplies online or at a store near you! Want to see more?
+    <a href="products.html"> Discover Products Here </a>
   </h3>
-  
+  </html>
