--- a/index.html
+++ b/index.html
@@ -26,4 +26,5 @@ Sale On 11x14 Canvases &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nb
     Our art shop has the products you need for home decor, framing, scrapbooking and more. Shop and save on arts and crafts supplies online or at a store near you! Want to see more?
     <a href="products.html"> Discover Products Here </a>
   </h3>
+  </body>
   </html>
