--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title> Products </title>
 </head>
-<body bgcolor="#FFE4E1">
+<body bgcolor="#FAF3EE">
 <header style="background-color: #FFC1A2; font-family: Monotype Corvisa;">
 <u>
 <h1 style="background-color: #FFC1A2; color: #053B47; text-align:center;">
@@ -22,7 +22,58 @@ Types of Items
 <li>Oil Paint</li>
 <li>Watercolors</li>
 <li>Paint Brushes</li>
-,<li>Frames</li>
+<li>Frames</li>
 <li>Pottery</li>
+<li> And more!</li>
 </ul>
 <hr>
+<center>
+<table border="1" bgcolor="white">
+<tr>
+<th> Product </th>
+<th> Image </th>
+<th> Price </th>
+</tr>
+<tr>
+<td> Acrylic Paint Set</td>
+<td> <img src="acrylic paint.jpeg" width="100" height="100"> </td>
+<td> $25 USD </td>
+</tr> 
+<td> Oil Paint Set</td>
+<td> <img src="oil paint.jpeg" width="100" height="100"> </td>
+<td> $35 USD </td>
+</tr>
+<tr>
+<td> Watercolor Paint </td>
+<td> <img src="watercolor.jpeg" width="100" height="100"> </td>
+<td> $20 USD </td>
+</tr>
+<td> Fabric Paint </td>
+<td> <img src="fabric paint.jpeg" width="100" height="100"> </td>
+<td> $15 USD </td>
+</tr>
+</table>
+</center>
+<hr>
+<center>
+<table border="1" bgcolor="white">
+<tr>
+<th>Product</th>
+<th>Image</th>
+<th>Price</th>
+</tr>
+<tr>
+<td>Canvas</td>
+<td><img src="canvas.jpeg" width="100" height="100"> </td>
+<td>$30 USD</td>
+</tr>
+<tr>
+<td>Frames</td>
+<td><img src="picture frame.jpeg" width="100" height="100"></td>
+<td>$25 USD</td>
+</tr>
+<tr>
+<td>Embroidery Hoop</td>
+<td><img src="embroidery hoop.jpeg" width="100" height="100"></td>
+<td>$9 USD</td>
+</tr>
