--- a/products.html
+++ b/products.html
@@ -77,3 +77,16 @@ Types of Items
 <td><img src="embroidery hoop.jpeg" width="100" height="100"></td>
 <td>$9 USD</td>
 </tr>
+<tr>
+  <td> Paintbrushes </td>
+  <td> <img src="painbrushes.jpeg"></td>
+  <td>$10 USD</td>
+  </tr>
+  <tr>
+    <td> Clay</td>
+    <td> <img src="clay.jpeg></td>
+      <td>$15 USD</td>
+      </tr>
+      </table>
+      <hr>
+      <a href="index.html"> Go Back to the Home Page </a>
