--- a/products.html
+++ b/products.html
@@ -90,3 +90,9 @@ Types of Items
       </table>
       <hr>
       <a href="index.html"> Go Back to the Home Page </a>
+      <br>
+      <br>
+      <br>
+      <a href="Ending Screen.html"> See Sales + More Information </a>
+      </body>
+      </html>
