--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ Sale On 11x14 Canvases &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nb
   <img src="Art Shop.jpg" width="80%" height="60%">
   </center>
   <hr>
-  <h1 style="background-color:#FAF3EE; color: #053B47; text-align:center; font-family:Monotype Corvisa;">
+  <h1 style="background-color:#FAF3EE; color: #053B47; text-align:center; font-family:Monotype Corsiva;">
     <u>
     About The Shop
     </u>
   </h1>
-  <h3 style="text-align:center; color:#053B47;">
+  <h3 style="text-align:center; color:#053B47; font-family:Monotype Corsiva; ">
     Our art shop has the products you need for home decor, framing, scrapbooking and more. Shop and save on arts and crafts supplies online or at a store near you! Want to see more?
-    <a href="products.html"> Discover Products Here </a>
+    <a href="products.html"style="font-family:Monotype Corsiva;"> Discover Our Products Here </a>
   </h3>
   </body>
   </html>
