--- a/products.html
+++ b/products.html
@@ -5,17 +5,17 @@
 <title> Products </title>
 </head>
 <body bgcolor="#FAF3EE">
-<header style="background-color: #FFC1A2; font-family: Monotype Corvisa;">
+<header style="background-color: #FFC1A2; font-family: Monotype Corsiva;">
 <u>
 <h1 style="background-color: #FFC1A2; color: #053B47; text-align:center;">
 Products
 </h1>
 </u>
 </header>
-<h1 style="color: #053B47; font-family: Monotype Corvisa;">
+<h1 style="color: #053B47; font-family: Monotype Corsiva;">
 Types of Items
 </h3>
-<h3 style="color: #053B47; font-family: Monotype Corvisa;">
+<h3 style="color: #053B47; font-family: Monotype Corsiva;">
 <ul>
 <li>Canvases</li>
 <li>Acrylic Paint</li>
