--- a/Ending Screen.html
+++ b/Ending Screen.html
@@ -1,2 +1,47 @@
 <!doctype html>
-<html lang=en>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title> Sales + More Information </title>
+</head>
+<body bgcolor="#FAF3EE"> 
+<header style="background-color: #FFC1A2; color: #053B47; text-align: center;">
+<h1 style="font-family: Monotype Corsiva">
+<u>
+<b>
+More Information
+</b>
+</u>
+</h1>
+</header>
+<h1 style="font-family:Monotype Corsiva; color: #053B47;">
+Sales
+</h2>
+<h3 style="font-family:Monotype Corsiva;">
+<ol>
+<li>50% off for 2 sets of 8 pack canvases ANY SIZE</li>
+<br>
+<li>Buy 1 Oil Paint Set and get 25% off of another Oil paint Set</li>
+<br>
+<li>Buy 1 Watercolor Set get 1 free</li>
+<br>
+<li>Buy 2 Acrylic Paint Sets get 1 Brush Pack free</li>
+<br>
+<li>10% off of any order over $80</li>
+</ol>
+<hr>
+<h1 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;">
+Have any questions/reviews? Here are places where you can contact us for more! 
+</h1>
+<h2 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;">
+Phone Number: (098)-765-432
+<br>
+<br>
+<br>
+E-mail: TheArtShop@gmail.com
+</h2>
+<hr>
+<marquee>  <h1 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;"> Thank you for Shopping With Us! <br> <br> <br> Leave a Review on our Mobile App "The Art Shop"</h1></marquee> 
+  <a href="index.html"> Navigate Back to Home Page </a> <br> <a href="products.html> Click here to go back to products </a>
+  </body>
+</html>
