--- a/products.html
+++ b/products.html
@@ -78,21 +78,19 @@ Types of Items
 <td>$9 USD</td>
 </tr>
 <tr>
-  <td> Paintbrushes </td>
-  <td> <img src="painbrushes.jpeg"></td>
-  <td>$10 USD</td>
-  </tr>
-  <tr>
-    <td> Clay</td>
-    <td> <img src="clay.jpeg></td>
-      <td>$15 USD</td>
-      </tr>
-      </table>
-      <hr>
-      <a href="index.html"> Go Back to the Home Page </a>
-      <br>
-      <br>
-      <br>
-      <a href="Ending Screen.html"> See Sales + More Information </a>
-      </body>
-      </html>
+<td> Paintbrushes </td>
+<td> <img src="paintbrushes.jpeg" width="100" height="100"></td>
+<td>$10 USD</td>
+</tr>
+<tr>
+<td> Clay </td>
+<td> <img src="clay.jpeg" width="100" height="100"> </td>
+<td>$15 USD</td>
+</tr>
+</table>
+<hr style:"color: 
+<a href="index.html"> <h2> Go Back to the Home Page </h2> </a>
+<br>
+<a href="Ending Screen.html"> <h2> See Sales + More Information </h2> </a>
+</body>
+</html>
