--- a/Ending Screen.html
+++ b/Ending Screen.html
@@ -42,6 +42,6 @@ E-mail: TheArtShop@gmail.com
 </h2>
 <hr>
 <marquee>  <h1 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;"> Thank you for Shopping With Us! <br> <br> <br> Leave a Review on our Mobile App "The Art Shop"</h1></marquee> 
-  <a href="index.html"> Navigate Back to Home Page </a> <br> <a href="products.html> Click here to go back to products </a>
+  <a href="index.html" style="font-family: Monotype Corsiva;"> <center> Navigate Back to Home Page </center> </a> <br> <a href="products.html" style="font-family:Monotype Corsiva:"> <center> Click here to go back to products </center> </a>
   </body>
 </html>
