--- a/Ending Screen.html
+++ b/Ending Screen.html
@@ -41,7 +41,10 @@ Phone Number: (098)-765-432
 E-mail: TheArtShop@gmail.com
 </h2>
 <hr>
-<marquee>  <h1 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;"> Thank you for Shopping With Us! <br> <br> <br> Leave a Review on our Mobile App "The Art Shop"</h1></marquee> 
+<marquee>  <h1 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;"> Thank you for Shopping With Us! </marquee>
+  <h1 style="font-family:Monotype Corsiva; color: #053B47; text-align: center;"> Review Form </h1>
+  <form name attribute="review form" method="post">
+    E-mail
   <a href="index.html" style="font-family:Monotype Corsiva;"> <h2> <center> Navigate Back to Home Page </center> </h2> </a> <br> <a href="products.html" style="font-family:Monotype Corsiva;"> <center> <h2> Click here to go back to products <h2> </center> </a>
   </body>
 </html>
